logs/Slang/chapter-8/8.9--static_properties.sv.log
name: static_properties
description: static class properties test
should_fail: 0
tags: 8.9
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.9--static_properties.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.9--static_properties.sv:8:2: error: language feature not yet supported
	class test_cls;
	^~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.9--static_properties.sv:12:2: error: use of undeclared identifier 'test_cls'
	test_cls test_obj0;
	^~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.9--static_properties.sv:13:2: error: use of undeclared identifier 'test_cls'
	test_cls test_obj1;
	^~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.9--static_properties.sv:16:15: error: language feature not yet supported
		test_obj0 = new;
		            ^~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.9--static_properties.sv:17:15: error: language feature not yet supported
		test_obj1 = new;
		            ^~~
